# PolishElectoralEconomics

./: .env.example  .gitignore  README.md  pyproject.toml
reports/tables/: baseline_fd_coefficients.csv  baseline_fd_metadata.json  baseline_fd_summary.txt
src/analysis/: build_panel.py  make_maps.py  run_baseline_fd.py
src/app/: app.py
src/data/: download_economic.py  download_elections.py  download_powiat_vars.py  harmonize_teryt.py
tests/: test_run_baseline_fd.py
