[project]
name = "polish-electoral-economics"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "geopandas>=0.14",
    "shapely>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "linearmodels>=6.0",
    "statsmodels>=0.14",
    "requests>=2.31",
    "tqdm>=4.66",
    "openpyxl>=3.1",
    "pyarrow>=14.0",
    "jupyter>=1.0",
    "pytest>=7.4",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
